Introduce product detail support, improve filtering, and enhance loading experience
Added `ProductDetails` component for detailed product view and routing support. Enhanced product filtering logic in `Sidebar` and `Products`. Introduced `LoadSpinner` for improved user feedback during data fetching. Refined backend endpoints in `ProductController` to support fetching similar products and optimized service logic. Updated frontend dependencies, navigation paths, and layout styling.